# lc

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh  environment_unix.yml  run_tests.py
.github/workflows/: CI.yml
cmake/: Findclang.cmake
examples/: expr2.c
integration_tests/: CMakeLists.txt  array_03.cpp  array_03_mdspan.cpp  array_04.cpp  array_04_mdspan.cpp  array_05.cpp  array_06.cpp  array_07.cpp  array_08.cpp  array_09.cpp  array_10.cpp  array_11.cpp  array_12.cpp  array_13.cpp  array_14.cpp  array_15.cpp  array_16.cpp  array_17.cpp  array_18.cpp  array_19.cpp  array_20.cpp  array_21.cpp  array_22.cpp  array_23.cpp  array_24.cpp  array_25.cpp  array_26.cpp  array_27.cpp  array_28.cpp  enum_01.cpp  enum_02.cpp  enum_03.cpp  enum_04.cpp  expr2.c  expr3.c  function_01.cpp  loop_01.cpp  nbody.cpp  nbody_01.cpp  nbody_02.cpp  (+25 more)
integration_tests/lnn/perceptron/: perceptron_main.hpp
integration_tests/lnn/regression/: regression_main.hpp
integration_tests/lnn/utils/: utils_main.hpp
integration_tests/lpdraw/: draw.hpp
src/: CMakeLists.txt  clang_ast_to_asr.h  fa.cpp  fa2.cpp  lc.cpp
src/lc/: CMakeLists.txt  LC.asdl  clang_ast_to_asr.cpp  clang_ast_to_asr.h  clang_ast_to_asr2.h  utils.cpp  utils.h
src/lc/parser/: parser.cpp  parser.h  parser.yy  parser_exception.h  parser_stype.h  semantics.h  tokenizer.h  tokenizer.re
src/libasr/: ASR.asdl  CMakeLists.txt  asdl_cpp.py  asr_utils.cpp  asr_utils.h  asr_verify.cpp  casting_utils.cpp  casting_utils.h  intrinsic_func_registry_util_gen.py
src/libasr/codegen/: asr_to_c.cpp  asr_to_c_cpp.h  asr_to_llvm.cpp  asr_to_llvm.h  asr_to_wasm.cpp  c_evaluator.cpp  c_evaluator.h  llvm_array_utils.cpp  llvm_utils.cpp
src/libasr/compiler_tester/: tester.py
src/libasr/pass/: array_op.cpp  intrinsic_function_registry.h  intrinsic_functions.h  pass_array_by_data.cpp  pass_manager.h  pass_utils.h  replace_symbolic.cpp  select_case.cpp
src/runtime/include/: stdio.h  stdlib.h
src/runtime/legacy/: CMakeLists.txt
tests/: array_01.cpp  array_01_mdspan.cpp  array_02.cpp  array_02_mdspan.cpp  parse_comments_01.cpp  span_01.cpp  tests.toml
tests/reference/: asr-array_01-080be05.json  asr-array_01-080be05.stdout  asr-array_01-1c98579.json  asr-array_01-1c98579.stdout  asr-array_01-3a6d424.json  asr-array_01-9c6ecba.json  asr-array_01-9c6ecba.stdout  asr-array_01-bf5ef80.json  asr-array_01-bf5ef80.stdout  asr-array_01_mdspan-3a0babe.json  asr-array_01_mdspan-3a0babe.stderr  asr-array_02-029184c.json  asr-array_02-038b0ce.json  asr-array_02-038b0ce.stdout  asr-array_02-0507073.json  asr-array_02-0507073.stdout  asr-array_02-e00d30a.json  asr-array_02-e00d30a.stdout  asr-array_02-ec70729.json  asr-array_02-ec70729.stdout  asr-array_02_mdspan-a54a3c5.json  asr-array_02_mdspan-a54a3c5.stderr  asr-array_04-b483094.json  asr-array_04-b483094.stdout  asr-array_04-be6ac8a.json  asr-array_04-be6ac8a.stdout  asr-array_04-f95b8eb.json  asr-array_04-f95b8eb.stdout  asr-array_28-e2b02d8.json  asr-array_28-e2b02d8.stdout  asr-expr2-5a54418.json  asr-expr2-5a54418.stdout  asr-expr2-b68bf48.json  asr-expr2-b68bf48.stderr  asr-expr2-b68bf48.stdout  asr-expr2-dda5523.json  asr-expr2-dda5523.stdout  asr-expr2-e32c683.json  asr-test-43e25d9.json  asr-test-5bdab26.json  (+45 more)
